--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,14 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.0.1'
 	id 'io.spring.dependency-management' version '1.1.0'
+	id 'war'
 }
 
 group = 'xyz.wonyeong'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
+
+apply plugin: 'war'
 
 configurations {
 	compileOnly {
@@ -18,6 +21,9 @@ repositories {
 	mavenCentral()
 }
 
+bootWar.enabled = false
+war.enabled = true
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.0'
@@ -25,6 +31,7 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 }
 
 tasks.named('test') {
