--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,7 @@
 spring:
-  datasource:
-    url: jdbc:h2:tcp://localhost/~/test
-    driver-class-name: org.h2.Driver
-    username: sa
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
   output:
     ansi:
       enabled: always
